chore: Add Google site verification tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta name="google-site-verification" content="BSfLufs8fRwb1Q0XCfsjNeFFQ8Tf7XlVTunOTuOTkQ0" />
     <meta name="google-site-verification" content="24Xse_qwSNpLcEGDhJ-WzxYvDneEPJBzC6xutEi0hfo" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -308,7 +309,7 @@
                     </p>
                     <div class="flex flex-wrap gap-2 mb-4">
                         <span class="bg-gray-200 text-gray-700 text-sm px-3 py-1 rounded-full">HTML</span>
-                        <span class="bg-gray-200 text-gray-700 text-sm px-3 py-1 rounded-full">Tailwind CSS</span>
+                        <span class="bg-gray-200 text-gray-700 text-sm px-3 py-1 rounded-full">CSS</span>
                         <span class="bg-gray-200 text-gray-700 text-sm px-3 py-1 rounded-full">JavaScript</span>
                     </div>
                     <div class="flex space-x-4 mt-auto">
