--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                         <span class="bg-gray-200 text-gray-700 text-sm px-3 py-1 rounded-full">JavaScript</span>
                     </div>
                     <div class="flex space-x-4 mt-auto">
-                        <a href="https://krishnajain-dev.github.io/netflix-ui-clone/" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-medium">Live Demo</a>
+                        <a href="https://airbnb-ui-clone-two.vercel.app/ target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-medium">Live Demo</a>
                         <a href="https://github.com/krishnajaindev/netflix-ui-clone" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline font-medium">Source Code</a>
                     </div>
                 </div>
